@@ -6,6 +6,8 @@ v0.5.0
 
   - Added --only-matching option, GH#7.
 
+  - Added --label option, GH#8.
+
 v0.4.3    2023-11-08 13:15:30 Europe/London
   [Documentation]
   - Fixed grammar in the Changes.
